--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Guessing Game</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
   <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/style.css" />
+  <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   
 </head>
-<body background = "./assets/images/backgroundPic.jpg">
-    <div id='app'>
+<body>
+    <div id='app' class="container">
 
         <div id='headers'>
           <!-- Title and subtitles! -->
@@ -18,21 +22,33 @@
         </div>
 
         <div id='main'>
-          <div id='input-parent'>
             <!-- Player's guess input, and submit button -->
-            <input id="playersGuessInput" type="number" placeholder="#" autofocus/>
-            <input id="submitButton" type="submit" value="GO!"/>
+              <div id="input-parent" style="text-align:center;">
+                <input id="player-input" class="center" placeholder="#" maxlength="3" autofocus="autofocus">
+                <button id="submit">Go!</button>
+              </div><!-- /input-group -->
           </div>
 
+          
           <div id='guesses'>
             <!-- unordered list of guesses -->
+            <ul class="list-inline">
+              <li class="list-inline-item">?</li>
+              <li class="list-inline-item">?</li>
+              <li class="list-inline-item">?</li>
+              <li class="list-inline-item">?</li>
+              <li class="list-inline-item">?</li>              
+            </ul>
           </div>
 
-          <div id="menu-btns">
+          <div id="menu-btns" style="text-align:center">
             <!-- reset and hint buttons -->
+          <button type="button" class="btn btn-default btn-lg">Reset</button>
+          <button type="button" class="btn btn-default btn-lg">Hint</button>          
+
           </div>
         </div>
-      </div>
+    
 
 
 
