footer logos styled

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   
 </head>
 <body>
-    <div id='app' class="container">
+    <div id='app'class="container-fluid">
 
         <div id='headers'>
           <!-- Title and subtitles! -->
@@ -63,7 +63,7 @@
             <h4>Project by RAYSA AURRECOCHEA</h4>   
           </div>
 
-          <div class='graceHoperLogo'>
+          <div class='graceHopperLogo'>
             <img src='./assets/images/grace_hopper_academy.png'></img>
           </div>
       </div>
