--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Guessing Game</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" href="./assets/images/window_icon.png">
+  <link rel="icon" href="./images/window_icon.png">
   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/style.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="./css/style.css" />
   <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   
 </head>
 <body>
@@ -19,7 +17,7 @@
         <div id='headers'>
           <!-- Title and subtitles! -->
           <h1>Play the Guessing Game!</h1>
-          <h3>Guess a number between 1-100!</h3>
+          <h2>Guess a number between 1-100!</h2>
         </div>
 
         <div id='main'>
@@ -44,8 +42,8 @@
 
           <div id="menu-btns" style="text-align:center">
             <!-- reset and hint buttons -->
-          <button type="button" class="btn btn-default btn-lg">Reset</button>
-          <button type="button" class="btn btn-default btn-lg">Hint</button>          
+          <button id="reset" type="button" class="btn btn-default btn-lg">Reset</button>
+          <button id="hint" type="button" class="btn btn-default btn-lg">Hint</button>          
 
           </div>
         </div>
@@ -56,7 +54,7 @@
     <div id='footer'>
         <div class="wrapper">
           <div class='fullstackLogo'>
-            <img src='./assets/images/fa-logo@2x.png'></img>
+            <img src='./images/fa-logo@2x.png'></img>
           </div>
 
           <div class='center'>
@@ -64,9 +62,13 @@
           </div>
 
           <div class='graceHopperLogo'>
-            <img src='./assets/images/grace_hopper_academy.png'></img>
+            <img src='./images/grace_hopper_academy.png'></img>
           </div>
       </div>
     </div>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>  
+  <script src="./js/GuessingGame_solution.js"></script> 
 </body>
 </html>
