--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <link rel="icon" href="./images/window_icon.png">
   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
   <link rel="stylesheet" type="text/css" media="screen" href="./css/style.css" />
+  <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">  
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  
   
 </head>
 <body>
@@ -68,7 +71,6 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>  
-  <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">  
   <script src="./js/GuessingGame_solution.js"></script> 
 </body>
 </html>
